ghost/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ghost
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`blog.pythondiscord.com`)
    kind: Rule
    services:
    - name: ghost
      port: 2368
    middlewares:
    - name: global-chain
  tls:
    certResolver: cfresolver
    domains:
    - main: "*.pythondiscord.com"
